--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 
 
       <p class="center-align" style="margin-top: 50px;">
-        Copyright &copy; 2020, Sachin Yadav & Karan Ashiwal
+        Copyright &copy; 2020, Sachin Yadav & Krishan yadav
       </p>
       <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
